# Vicon_ROS2_Bridge

./: LICENSE  README.md
Vicon_ROS2_Bridge/: CMakeLists.txt
Vicon_ROS2_Bridge/include/: ViconCaptureTree.h  ViconSDK.h
Vicon_ROS2_Bridge/src/: ViconSDK.cpp  main.cpp
src/vicon_msgs/msg/: Marker.msg  Segment.msg  Subject.msg  ViconCaptureTree.msg
src/vicon_ros2_bridge/: CMakeLists.txt  README.md  package.xml
src/vicon_ros2_bridge/include/: ViconSDK.h
src/vicon_ros2_bridge/src/: ViconSDK.cpp
vicon_msgs/: CMakeLists.txt  package.xml
vicon_ros2_bridge/: CMakeLists.txt
vicon_ros2_bridge/include/: ViconCaptureTree.h  ViconSDK.h
vicon_ros2_bridge/src/: ViconSDK.cpp  main.cpp  vicon_ros2_brige.cpp
