<package format="3">
  <name>vicon_msgs</name>
  <version>0.4.0</version>
  <description>Contains message and service definitions used by the examples.</description>
  <maintainer email="hughzcl@outlook.com">hughzcl</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <!-- <ros1_bridge mapping_rules="mapping_rules.yaml"/> -->
  </export>
</package>